[package]
name = "reqwest-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reqwest"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
ureq = { version = "2.5.0", features = ["json"] }
