
[tool.poetry]
name = "reqwest-py"
version = "0.1.0"
description = ""
authors = ["terabyte3 <terry.bazemoreiii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
maturin = "^0.13.1"


[tool.poetry.scripts]
dev = "maturin develop"
build = "maturin build"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "reqwest-py"
requires-python = ">=3.7"
readme = "readme.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


